[project]
name = "geopipeline"
version = "0.1.0"
description = "Geocoding and NER pipeline"
authors = [
  { name="Robin Baran Aytac" }
]
dependencies = [
    "pymongo>=4.0",
    "PyYAML>=6.0",
    "requests>=2.31",
    "spacy>=3.8",
    "tqdm>=4.60",
    "en_core_web_md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl"
]


[project.scripts]
geopipeline-ner = "geopipeline.cli.ner_cli:main"
geopipeline-geocode = "geopipeline.cli.geocode_cli:main"
